--- a/num3tick.html
+++ b/num3tick.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>
+            
+        </title>
+    </head>
     <body>
         <script>
             function numPrice(num){
@@ -26,7 +30,8 @@
                     return numRes;
                 }
             }
-            console.log(numPrice(2521254474));
+            console.log(numPrice(10000000));
+            //10,000,000
         </script>
     </body>
 </html>
